Added automatic generation of .def file for MinGW.

--- a/lib/win32/Makefile.win32.cross-mgw
+++ b/lib/win32/Makefile.win32.cross-mgw
@@ -123,11 +123,12 @@ libglfw.a: $(OBJS)
 	$(TARGET)$(MKLIB) $(LIBFLAGS) $@ $(OBJS) $(SYSOBJS)
 
 ##########################################################################
-# Rule for building dynamic library
+# Rules for building dynamic library
 ##########################################################################
 glfw.dll: $(DLLOBJS)
+	$(TARGET)$(CC) -shared -o $@ -Wl,--output-def,libglfwdll.def $(DLLOBJS) $(LINKLIBS)
 	$(TARGET)$(CC) -shared -o $@ -Wl,--kill-at $(DLLOBJS) $(LINKFLAGS) $(LINKLIBS)
-	$(TARGET)$(DLLTOOL) --kill-at --output-lib libglfwdll.a --def libglfwdll.def
+	$(TARGET)$(DLLTOOL) --kill-at --output-lib libglfwdll.a --dllname $@ --def libglfwdll.def
 
 libglfw.pc: libglfw.pc.in
 	$(SED) -e 's,\@PREFIX\@,$(PREFIX),' libglfw.pc.in > libglfw.pc
